# FastApi-Template

./: .gitignore  README.md  main.py  pyproject.toml  result.xml  test_output.txt
alembic/: env.py
alembic/versions/: 4a287eb9b020_add_provider_to_users.py  655a99145179_initial_migration.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/routers/: auth.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: session.py
app/models/: otp.py  user.py
app/repos/: otp_repo.py  user_repo.py
app/schemas/: token.py  user.py
app/services/: auth_service.py  email_service.py
app/utils/: otp.py
scripts/: create_db.py  verify_auth.py
tests/: conftest.py  test_auth.py  test_simple.py
